Se crea la documentación para signup, login, reset_password y update_passwrod, se crea la lógica para obtener a todos los usuarios y a los usuarios por id, falta generar el token para que sean rutas protegidas, se añaden los roles, falta asociar los roles con los usuarios
